--- a/examples/package.json
+++ b/examples/package.json
@@ -9,7 +9,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"directives-lib": "^1.0.0",
+		"@element-plus/icons-vue": "^2.3.1",
+		"directives-lib": "*",
+		"element-plus": "^2.5.3",
+		"js-cool": "^5.17.0",
 		"vue": "^3.3.4"
 	},
 	"devDependencies": {
