--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "directives-lib",
 	"description": "Collection of common directives that support vue2 and vue3",
 	"version": "1.0.0-beta.1",
-	"packageManager": "pnpm@8.14.1",
+	"packageManager": "pnpm@9.1.0",
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"browser": "dist/index.iife.js",
@@ -52,29 +52,29 @@
 		"prettier": "prettier --write \"**/*.{js,ts,jsx,tsx,yml,json,md}\""
 	},
 	"dependencies": {
-		"js-cool": "^5.17.0",
+		"js-cool": "^5.19.1",
 		"tslib": "^2.6.2",
-		"vue-demi": "^0.14.6"
+		"vue-demi": "^0.14.7"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.23.7",
-		"@babel/preset-env": "^7.23.8",
-		"@babel/preset-typescript": "^7.23.3",
-		"@eslint-sets/eslint-config-vue3": "^5.12.0",
-		"@microsoft/api-extractor": "^7.43.0",
+		"@babel/core": "^7.24.5",
+		"@babel/preset-env": "^7.24.5",
+		"@babel/preset-typescript": "^7.24.1",
+		"@eslint-sets/eslint-config-vue3": "^5.13.0",
+		"@microsoft/api-extractor": "^7.43.4",
 		"@rollup/plugin-babel": "^6.0.4",
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-terser": "^0.4.4",
 		"@rollup/plugin-typescript": "^11.1.6",
-		"@types/jest": "^29.5.11",
-		"@types/node": "^20.11.5",
-		"@vitejs/plugin-vue": "^5.0.3",
+		"@types/jest": "^29.5.12",
+		"@types/node": "^20.12.11",
+		"@vitejs/plugin-vue": "^5.0.4",
 		"@vitejs/plugin-vue-jsx": "^3.1.0",
-		"@vue/compiler-sfc": "^3.4.15",
+		"@vue/compiler-sfc": "^3.4.27",
 		"chalk": "^5.3.0",
-		"core-js": "^3.35.1",
+		"core-js": "^3.37.0",
 		"coveralls": "^3.1.1",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.56.0",
@@ -83,28 +83,28 @@
 		"less": "^4.2.0",
 		"load-yml": "^1.4.0",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^3.2.4",
+		"prettier": "^3.2.5",
 		"prettier-config-common": "^1.4.0",
 		"reinstaller": "^3.0.2",
 		"rm-all": "^1.1.1",
-		"rollup": "^4.13.0",
+		"rollup": "^4.17.2",
 		"rollup-plugin-filesize": "^10.0.0",
 		"rollup-plugin-inject-code": "^1.1.0",
 		"rollup-plugin-visualizer": "^5.12.0",
-		"ts-jest": "^29.1.1",
-		"ts-morph": "^21.0.1",
+		"ts-jest": "^29.1.2",
+		"ts-morph": "^22.0.0",
 		"tsnd": "^1.1.0",
-		"typedoc": "^0.25.7",
-		"typedoc-plugin-markdown": "^3.17.1",
-		"typescript": "^5.3.3",
-		"vite": "^5.2.7",
-		"vite-plugin-cdn-import": "^0.3.5",
+		"typedoc": "^0.25.13",
+		"typedoc-plugin-markdown": "^4.0.1",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.11",
+		"vite-plugin-cdn-import": "^1.0.1",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-style-import": "^2.0.0",
-		"vitepress": "1.0.0-rc.39",
-		"vue": "^3.4.15",
+		"vitepress": "1.1.4",
+		"vue": "^3.4.27",
 		"vue2": "npm:vue@^2.7.14",
-		"zx": "^8.0.1"
+		"zx": "^8.0.2"
 	},
 	"peerDependencies": {
 		"@vue/composition-api": ">=1.0.0",
